--- a/maplandmatrix/templates/index.html
+++ b/maplandmatrix/templates/index.html
@@ -17,203 +17,12 @@
 {% endblock %}
 
 {% block content %}
-    <script type="text/javascript">
-        function init_form_condition(el) {
-            // variable
-            el.change(function () {
-                var form = $(this).parents("ul.form");
-                update_widget(form.find(".field:last .value-wrapper"), $(this).find("option:selected").val(), form);
-            }).change();
-            // operator
-            el.parents("ul.form").find(".operator").change(function () {
-                el.change();
-            });
-            // delete button
-            el.parents("ul.form").find(".delete-row").click(function () {
-                var form = $(this).parents("form"),
-                        conditions = form.find(".condition:visible");
-                $(this).parents("ul.form.condition").remove();
-                var count = $("#id_{{ empty_form_conditions.prefix }}-TOTAL_FORMS").val() - 1;
-                $("#id_{{ empty_form_conditions.prefix }}-TOTAL_FORMS").val(count);
-                // reset row counters
-                var new_name;
-                for (var i = 0; i < count; i++) {
-                    $(conditions[i]).find(":input").each(function () {
-                        $(this).attr("id") && $(this).attr("id", $(this).attr("id").replace(/{{ empty_form_conditions.prefix }}-[0-9]+/, "{{ empty_form_conditions.prefix }}-" + i));
-                        $(this).attr("name") && $(this).attr("name", $(this).attr("name").replace(/{{ empty_form_conditions.prefix }}-[0-9]+/, "{{ empty_form_conditions.prefix }}-" + i));
-                    })
-                    //el.parents("ul.form").find("li.field")
-                }
-            });
-        }
-        ;
-        $(document).ready(function () {
-            // add sticky header to table
-            var offset = $('.navbar').height();
-            $("#summary").stickyTableHeaders({fixedOffset: offset});
-            // enable popover for intention of investment
-            $('a.intention-icon').popover({trigger: "hover", placement: "top"});
-            init_form_condition($("ul.form:not(.empty) .field:first-child select"));
-            // collapsible filters
-            $(".toggle-filter").click(function (e) {
-                e.preventDefault();
-                $(".collapsible .collapsible-form").toggle();
-                var container = $(".collapsible .collapsible-tags"),
-                        tags = container.find("ul");
-                if (container.hasClass("collapsed")) {
-                    tags.empty();
-                    $(".form.condition:not(.empty)").each(function (index) {
-                        var tag = "";
-                        $(this).find(":input").each(function (index) {
-                            var el = $(this),
-                                    name = el.attr("name");
-                            if (name.indexOf("variable") > -1) {
-                                // variable
-                                tag += el.find(":selected").text();
-                            }
-                            /* requires update_widget to be executed before
-                             else if (name.indexOf("operator") > -1) {
-                             // operator
-                             tag += " " + el.val();
-                             // value (select)
-                             } else if (el.is("select")) {
-                             tag += " " + el.find(":selected").text();
-                             // value (radio buttons)
-                             } else if (el.is("[type=checkbox]")) {
-                             tag += (tag.indexOf(",") > -1) && (" " + el.parent().text()) || ", " + el.parent().text();
-                             // value (other)
-                             } else if (!el.is("[type=hidden]")) {
-                             tag += " " + el.val();
-                             }*/
-                        });
-                        tag = "<li><span class=\"label\">" + tag + "</span></li>";
-                        $(tag).appendTo(tags);
-                    });
-                    container.removeClass("collapsed");
-                    container.find(".toggle-filter").text("Manage filters");
-                    container.find(".toggle-tooltip").show();
-                } else {
-                    container.addClass("collapsed");
-                    container.find(".toggle-filter").text("Hide filters");
-                    container.find(".toggle-tooltip").hide();
-                }
-                return false;
-            }).click();
-        });
-    </script>
-    <div class="hidden">
-        <div class="col-md-7">
-            <div class="collapsible">
-                <div class="collapsible-form">
-                    <form method="GET" class="form-inline filters">
-                        <div id="empty" class="rules row">
-                            <div class="col-md-8">
-                                <input type="hidden" name="filtered" value="true"/>
-                                <input type="hidden" name="limit" value="{{ limit }}"/>
-                                <input type="hidden" name="order_by" value="{{ data.order_by }}"/>
-                                <input type="submit" class="submit" value="Apply Filters" style="display: none"/>
-                                {% if empty_form_conditions %}
-                                    <input type="hidden" name="prefix" value="{{ empty_form_conditions.prefix }}">
-                                    {{ empty_form_conditions.management_form }}
-                                    {% for empty_form in empty_form_conditions.forms %}
-                                        <ul class="form clearfix condition">
-                                            {{ empty_form.as_ul }}
-                                            <li>&nbsp;<a class="delete-row" href="javascript:void(0)"><i
-                                                    class="icon icon-remove"></i></a></li>
-                                        </ul>
-                                    {% endfor %}
-                                {% endif %}
-                                <ul class="form clearfix condition empty">
-                                    {{ empty_form_conditions.empty_form.as_ul }}
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-8">
-                                <script type="text/javascript">
-                                    $(document).ready(function () {
-                                        //
-                                        $(".subnav li.limit a").click(function (e) {
-                                            e.preventDefault();
-                                            $("input[name=limit]").val($(this).attr("href").split("/")[1]);
-                                            $("form").submit();
-                                        });
-                                        //
-                                        $('.reset-filter').click(function () {
-                                            $('.rules').find('ul:gt(0)').remove();
-                                            $('#id_{{ empty_form_conditions.prefix }}-TOTAL_FORMS').val(0);
-                                        });
-                                        //
-                                        $('#empty ul.form.empty :input, #empty ul.form.empty label').each(function () {
-                                            var id = $(this).attr("id");
-                                            var name = $(this).attr("name");
-                                            var value = $(this).attr("value");
-                                            var for_str = $(this).attr("for");
-                                            if (id != undefined) {
-                                                $(this).attr("id", id.replace("id_{{ empty_form_conditions.prefix }}-__prefix__-", ""));
-                                            }
-                                            if (name != undefined) {
-                                                $(this).attr("name", name.replace("{{ empty_form_conditions.prefix }}-__prefix__-", ""));
-                                            }
-                                            if (value != undefined) {
-                                                $(this).attr("value", value.replace("{{ empty_form_conditions.prefix }}-__prefix__-", ""));
-                                            }
-                                            if (for_str != undefined) {
-                                                $(this).attr("for", for_str.replace("id_{{ empty_form_conditions.prefix }}-__prefix__-", ""));
-                                            }
-                                        });
-                                        //
-                                        $("ul.form.empty").formset({
-                                            prefix: '{{ empty_form_conditions.prefix }}',
-                                            addText: '{% trans "Add filter" %}',
-                                            deleteText: '<i class="icon icon-remove"></i>',
-                                            added: function (row) {
-                                                // FIXME: Move row out of button group, this should be handled by the formset
-                                                row.remove();
-                                                row.insertBefore($(".add-row:visible").parent().parent().find(".btn-group"))
-                                                init_form_condition($("ul.form.condition:last .field:first-child select"));
-                                            }
-                                        });
-                                        // FIXME: Move add-row button into the button group, don't use javascript for that
-                                        var b = $(".add-row").addClass("btn").hide();
-                                        $(".filters .btn-group").prepend(b.show());
-                                    })
-                                </script>
-                                <div class="btn-group">
-                                    <button type="submit" class="btn" name="reset"
-                                            value="reset">{% trans "Reset" %}</button>
-                                    <button type="submit" class="btn">{% trans "Go" %}</button>
-                                </div>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <div class="collapsible-tags collapsed">
-                    <h5>Active filters:</h5>
-                    <ul class="unstyled"></ul>
-                    <a href="javascript:;" class="toggle-filter">Manage filters</a>
-                    <a href="#" class="toggle-tooltip"
-                       title="You can create custom filters here. However, please note that filters are reset when changing entry point.">
-                        <i class="icon icon-question-sign"> </i></a>
-                    {% if data.count %}<p style="clear: both">Showing
-                        {% if data.items|length != data.count %}{{ data.items|length }} of {% endif %}{{ data.count }}
-                        row{{ data.count|pluralize }}.</p>{% endif %}
-                </div>
-            </div>
-        </div>
-        <div id="search" class="col-md-2 right">
-            <form role="form">
-                <div class="form-group has-feedback">
-                    <input type="text" class="form-control" placeholder="Search countries" />
-                    <i class="form-control-feedback glyphicon glyphicon-search"></i>
-                </div>
-            </form>
-        </div>
-    </div>
-
     <div id="alert_placeholder"></div>
 
     <div id="map" class="map" title='All Deals'></div>
+
+    <script>
+    </script>
 
     <div id="popup" class="ol-popup">
         <span>Deal details</span>
