--- a/landmatrix/static/css/icons.css
+++ b/landmatrix/static/css/icons.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'landmatrix';
-    src:    url('/media/fonts/landmatrix.eot?g7d85c');
-    src:    url('/media/fonts/landmatrix.eot?g7d85c#iefix') format('embedded-opentype'),
-        url('/media/fonts/landmatrix.ttf?g7d85c') format('truetype'),
-        url('/media/fonts/landmatrix.woff?g7d85c') format('woff'),
-        url('/media/fonts/landmatrix.svg?g7d85c#landmatrix') format('svg');
+    src:    url('/static/fonts/landmatrix.eot?g7d85c');
+    src:    url('/static/fonts/landmatrix.eot?g7d85c#iefix') format('embedded-opentype'),
+        url('/static/fonts/landmatrix.ttf?g7d85c') format('truetype'),
+        url('/static/fonts/landmatrix.woff?g7d85c') format('woff'),
+        url('/static/fonts/landmatrix.svg?g7d85c#landmatrix') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -17,7 +17,7 @@
     font-weight: normal;
     font-variant: normal;
     text-transform: none;
-    line-height: 1;
+/*    line-height: 1; */
 
     /* Better Font Rendering =========== */
     -webkit-font-smoothing: antialiased;
