Deal detail and editor view upgraded

--- a/global_app/templates/deal-detail.html
+++ b/global_app/templates/deal-detail.html
@@ -27,8 +27,8 @@
 
 {% block breadcrumb %}
 <ul class="breadcrumb">
-  <li><a href="/">Home</a> <span class="divider">|</span></li>
-  <li><a href="/get-the-detail/">Get the detail</a> <span class="divider">|</span></li>
+  <li><a href="/">Home</a> <span class="divider"></span></li>
+  <li><a href="/get-the-detail/">Get the detail</a> <span class="divider"></span></li>
   <li>Deal details</li>
 </ul>
 {% endblock %}
