--- a/global_app/templates/add-deal.html
+++ b/global_app/templates/add-deal.html
@@ -1,31 +1,16 @@
 {% extends "base.html" %}
-{% load i18n custom_tags %}
-{% load humanize %}
+{% load static i18n custom_tags humanize %}
 
 {% block head %}
 
-  {# bootstrap #}
-    <!-- TODO: Clear up library usage here. Why is this file including them itself? Should've been done
-    on top. in base.html already. -->
-
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-  <style type="text/css">
-    .bs-example{
-    	margin: 20px;
-    }
-  </style>
-
-  {# map #}
-  <script src="/media/js/editor/map.js" type="text/javascript" charset="utf-8"></script>
-  <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&language=en"></script>
+  <!-- {# <script src="/media/js/editor/map.js" type="text/javascript" charset="utf-8"></script>
+  <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&language=en"></script> #}
+  -->
 
 
-  <script src="/media/js/editor/year-based-fields.js" type="text/javascript" charset="utf-8"></script>
-  <script src="/media/js/editor/livesearch.js" type="text/javascript" charset="utf-8"></script>
-  <script src="/media/js/editor/add_change.js" type="text/javascript" charset="utf-8"></script>
+  <script src="{% static "js/editor/year-based-fields.js" %}" type="text/javascript" charset="utf-8"></script>
+  <script src="{% static "js/editor/livesearch.js" %}" type="text/javascript" charset="utf-8"></script>
+  <script src="{% static "js/editor/add_change.js" %}" type="text/javascript" charset="utf-8"></script>
 {% endblock %}
 
 {% block page_title %}Add a deal{% endblock %}
@@ -33,8 +18,8 @@
 
 {% block breadcrumb %}
 <ul class="breadcrumb">
-  <li><a href="/editor">Editor</a> <span class="divider">|</span></li>
-  <li><a href="/en/global/add/">Add a deal</a> <span class="divider">|</span></li>
+  <li><a href="/editor">Editor</a> <span class="divider"></span></li>
+  <li><a href="/en/global/add/">Add a deal</a> <span class="divider"></span></li>
   <li>Add a deal</li>
 </ul>
 {% endblock %}
@@ -48,7 +33,6 @@
 
     {% csrf_token %}
 
-    <div class="bs-example">
       <div class="panel-group" id="accordion">
 
         {% if forms %}
@@ -57,12 +41,16 @@
 
             <div class="panel panel-default">
 
-              {% if form.forms %}
 
                 <div class="panel-heading">
                   <h4 class="panel-title">
                     <a data-toggle="collapse" data-parent="#accordion" href="#collapse{{forloop.counter}}">
-                      Formset {{forloop.counter}}: {#{ form }#}
+                      {% if form.forms %}
+                          Formset {{forloop.counter}}: {#{ form }#}
+                      {% else %}      {# form.forms #}
+                          Form {{forloop.counter}}: {#{ form }#}
+                      {% endif %}     {# form.forms #}
+                      <span id="collapsebtn{{forloop.counter}}" class="lm-chevron-circle-up pull-right"></span>
                     </a>
                   </h4>
                 </div>
@@ -70,60 +58,53 @@
                 <div id="collapse{{forloop.counter}}" class="panel-collapse collapse in">
                   <div class="panel-body">
                     <table class="i-dont-know-how-to-do-this-in-css-yes-i-know-booh">
+                      {% if form.forms %}
 
-                      {% if form.forms.0.has_investor %}
-                        {{ form }}
+                          {% if form.forms.0.has_investor %}
+                            {{ form }}
 
-                        {% comment %}
-                        <tr>
-                          <td>Primary investor:</td>
-                          <td>{{ investor.primary_investor.name }}</td>
-                        </tr>
-                        {% for i in investor.secondary_investors %}
-                          <tr>
-                            <td>Secondary investor:</td>
-                            <td>{{i.tags.investor_name}} - {{i.tags.country}}, {{i.tags.classification}} ({{i.investment_ratio}}%)</td>
-                            <td>{{i.comment}}</td>
-                          </tr>
-                        {% endfor %}
-                        {% endcomment %}
+                            {% comment %}
+                            <tr>
+                              <td>Primary investor:</td>
+                              <td>{{ investor.primary_investor.name }}</td>
+                            </tr>
+                            {% for i in investor.secondary_investors %}
+                              <tr>
+                                <td>Secondary investor:</td>
+                                <td>{{i.tags.investor_name}} - {{i.tags.country}}, {{i.tags.classification}} ({{i.investment_ratio}}%)</td>
+                                <td>{{i.comment}}</td>
+                              </tr>
+                            {% endfor %}
+                            {% endcomment %}
 
-                      {% else %}    {# form.forms.0.has_investor #}
+                          {% else %}    {# form.forms.0.has_investor #}
 
-                        {{ form }}
+                            {{ form }}
 
-                      {% endif %}   {# form.forms.0.has_investor #}
+                          {% endif %}   {# form.forms.0.has_investor #}
+                      {% else %}      {# form.forms #}
+                          {{ form.as_table }}
+                      {% endif %}     {# form.forms #}
                     </table>
                   </div>
                 </div>
-
-              {% else %}      {# form.forms #}
-
-                <div class="panel-heading">
-                  <h4 class="panel-title">
-                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse{{forloop.counter}}">
-                      Form {{forloop.counter}}: {#{ form }#}
-                    </a>
-                  </h4>
-                </div>
-
-                <div id="collapse{{forloop.counter}}" class="panel-collapse collapse in">
-                  <div class="panel-body">
-                    <table class="i-dont-know-how-to-do-this-in-css-yes-i-know-booh">
-                      {{ form.as_table }}
-                    </table>
-                  </div>
-                </div>
-
-              {% endif %}     {# form.forms #}
-
             </div>            {# class="panel panel-default" #}
+
+            <script>
+                var collapsename = "#collapse{{forloop.counter}}";
+                console.log(collapsename);
+                $(collapsename).on("hidden.bs.collapse", function() {
+                    $("#collapsebtn{{forloop.counter}}").addClass('lm-chevron-circle-down').removeClass('lm-chevron-circle-up');
+                });
+                 $(collapsename).on("shown.bs.collapse", function() {
+                    $("#collapsebtn{{forloop.counter}}").removeClass('lm-chevron-circle-down').addClass('lm-chevron-circle-up');
+                });
+            </script>
 
           {% endfor %}
 
         {% endif %}           {# forms #}
 
-      </div>
     </div>
 
     <input type="submit" value="Submit" />
