Breadcrumbs moved to 2016

--- a/templates/base.html
+++ b/templates/base.html
@@ -185,7 +185,7 @@
         {% block subnav %}{% endblock %}
         {% block breadcrumb %}
             <ul class="breadcrumb">
-                <li><a href="/">Home</a> <span class="divider">|</span></li>
+                <li><a href="/">Home</a> <span class="divider"></span></li>
                 <li>{% page_attribute "title" %}</li>
             </ul>
         {% endblock %}
