add history date to links to history items
Former-commit-id: 343bfd5a061d49175360245d5ad23a38e6d7469f

--- a/global_app/templates/deal-detail.html
+++ b/global_app/templates/deal-detail.html
@@ -136,7 +136,7 @@
                     <td>
                       {% if not forloop.last %}
                         {# TODO: include as AJAX call #}
-                        <a href="/en/global/compare/{{item.activity.activity_identifier}}_{{item.activity_history_date}}/x/">
+                        <a href="/en/global/compare/{{item.activity.activity_identifier}}_{{date}}/">
                           compare with previous version
                         </a>
                       {% else %}
