--- a/global_app/templates/change-deal.html
+++ b/global_app/templates/change-deal.html
@@ -62,7 +62,7 @@
                 <div class="panel-heading">
                   <h4 class="panel-title">
                     <a data-toggle="collapse" data-parent="#accordion" href="#collapse{{forloop.counter}}">
-                      Formset {{forloop.counter}}: {#{ form }#}
+                      {{ form.form_title }}
                     </a>
                   </h4>
                 </div>
@@ -102,7 +102,7 @@
                 <div class="panel-heading">
                   <h4 class="panel-title">
                     <a data-toggle="collapse" data-parent="#accordion" href="#collapse{{forloop.counter}}">
-                      Form {{forloop.counter}}: {#{ form }#}
+                      {{ form.form_title }}
                     </a>
                   </h4>
                 </div>
