--- a/global_app/templates/deal-detail.html
+++ b/global_app/templates/deal-detail.html
@@ -50,11 +50,7 @@
                 <div class="panel-heading">
                   <h4 class="panel-title">
                     <a data-toggle="collapse" data-target="#collapse{{forloop.counter}}" data-parent="#accordion" href="#collapse{{forloop.counter}}">
-                      {% if form.forms %}
-                          Formset {{forloop.counter}}:
-                      {% else %}
-                          Form {{forloop.counter}}:
-                      {% endif %}
+                      {{ form.form_title }}
                       <span id="collapsebtn{{forloop.counter}}" class="lm-chevron-circle-down pull-right"></span>
                     </a>
                   </h4>
