--- a/landmatrix/static/css/map.css
+++ b/landmatrix/static/css/map.css
@@ -33,11 +33,11 @@ p {
     padding: 2px 2px;
 }
 
-/*
-.map {
+
+/*.map {
     clear: both;
-    width: 100%;
-    height: 100%;
+    width: 400px;
+    height: 300px;
 }
 */
 
@@ -88,7 +88,7 @@ p {
 .ol-popup-closer:after {
     content: "✖";
 }
-
+/*
 .map:-moz-full-screen {
     height: 100%;
 }
@@ -104,7 +104,7 @@ p {
 .map:fullscreen {
     height: 100%;
 }
-
+*/
 .ol-rotate {
     top: 3em;
 }
@@ -112,6 +112,17 @@ p {
 .map .panel,li,ul,.group  {
     line-height: 0.5em !important;
     font-size: 12px !important;
+}
+
+table .map {
+    position: relative;
+    width: 200px;
+    height: 200px;
+    top: 15px;
+    margin-bottom: 15px;
+    overflow: hidden;
+    -moz-border-radius: 8px;
+    border-radius: 8px;
 }
 
 .legend-symbol {
